fixing the stying on mobile devices

--- a/src/components/WeatherApp/WeatherApp.css
+++ b/src/components/WeatherApp/WeatherApp.css
@@ -11,7 +11,7 @@
     display: flex;
     justify-content: center;
     gap: 2.5%;
-    padding-top: 7%;
+    padding-top: 9%;
     width: 100%;
     height: 6%;
 }
@@ -127,7 +127,8 @@
         margin-top: 15%;
     }
     .weather-image img {
-        height: 22vh;
+        height: 20vh;
+        margin-top: 2vh;
     }
 }
 
@@ -139,7 +140,7 @@
 
 @media screen and (max-width: 820px) {
     .container {
-        width: 70vw;
+        width: 80vw;
         height: 65vh;
     }
 }
